--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "benefi",
   "version": "0.0.1",
-  "description": "Homey Cafe",
+  "description": "Coffee, Tea and homemade cakes",
   "productName": "Benefi Cafe",
   "author": "nekirtech@gmail.com",
   "private": true,
